<resources>
    <string name="app_name" translatable="false">MyStorie</string>
    <string name="btn_one" translatable="false">BtnOne</string>
    <string name="btn_two" translatable="false">BtnTwo</string>
    <string name="flavor" translatable="false">Flavor:</string>
    <string name="state_after_view" translatable="false">AfterViews</string>
    <string name="click" translatable="false">Click</string>
    <string name="tag_next_flow" translatable="false">NEXT_FLOW</string>
    <string name="not_keep_activities_mode_info" translatable="false">Ops, o modo desenvolvedor tá habilitado no celular. Desativa a opção “Não manter atividades” e depois volta aqui ;)</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="exit" translatable="false">Sair</string>
    <string name="user_or_email" translatable="false">Username or Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="log_in" translatable="false">LOG IN</string>
    <string name="or" translatable="false">OR</string>
    <string name="login_with_facebook" translatable="false">LOGIN WITH FACEBOOK</string>
    <!-- SERVER-->
    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id" translatable="false">3xa5tKl6fVImLb7SQrHzUkZ4vJKaMtSI6q9XU02g</string>
    <string name="back4app_client_key" translatable="false">m3PY6IvMAb1YAUgbijA8Ab0xrLDXzuVJP9aTr3Sg</string>
    <!-- FACEBOOK -->
    <string name="facebook_app_id" translatable="false">1929462134019547</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1929462134019547</string>


    <string name="register" translatable="false">Register</string>
    <string name="send_email_confirmation" translatable="false">Send-me email to confirm</string>
    <string name="user" translatable="false">User</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="confirm_password" translatable="false">Confirm password</string>
    <string name="acompanhe_o_dia_dia" translatable="false">Acompanhe o dia-a-dia do seu candidato por aqui</string>
    <string name="veja_secoes" translatable="false">Veja aqui as seções em destaque!</string>
    <string name="ou_menu" translatable="false">Ou acesse pelo menu ali na esquerda superior ;)</string>
    <string name="criar_nova_noticia" translatable="false">Criar nova noticia</string>
    <string name="criar_nova_novidade" translatable="false">Criar nova novidade</string>
    <string name="atualizar_contato" translatable="false">Atualizar contato</string>
    <string name="visualizar_noticias" translatable="false">Visualizar minhas noticias</string>
    <string name="visualizar_novidades" translatable="false">Visualizar minhas novidades</string>
    <string name="entre_em_contato" translatable="false">Entre em contato com a gente pelo email: meustorie@meustorie.com</string>
    <string name="todos_os_direitos" translatable="false">Todos os direitos de imagem a este aplicativo são aprovados pela pessoa física</string>
    <string name="facebook_miss_information" translatable="false">Voce ainda nao cadastrou a pagina web do seu facebook</string>
    <string name="twitter_miss_information" translatable="false">Voce ainda nao cadastrou a pagina web do seu twitter</string>
    <string name="cellphone_miss_information" translatable="false">Voce ainda nao cadastrou celular</string>
    <string name="email_miss_information" translatable="false">Voce nao cadastrou ainda um email</string>
    <string name="title_activity_main3" translatable="false">Main3Activity</string>

    <string name="esqueci_a_senha" translatable="false">Esqueci a senha</string>
    <string name="login" translatable="false">Login</string>
    <string name="esqueceu_sua_senha" translatable="false">Esqueceu sua senha?</string>
    <string name="please_wait" translatable="false">Aguarde..</string>

    <string name="contemporaneo" translatable="false">Contemporâneo de Jesus</string>
    <string name="contemporaneo_de_jesus" translatable="false">Apesar de ter sido contemporâneo de Jesus Cristo, Séneca não fez quaisquer relatos significativos de fenómenos milagrosos que aparentemente anunciavam o advento de uma poderosa nova religião; entretanto, segundo Jerónimo (\"De Viris Illustribus\", xii), Séneca teria trocado correspondências com Paulo (apóstolo com cidadania romana, também conhecido por Saulo).[7] Constata-se que os cristãos, por intermédio de Lúcio Aneu Séneca, assimilaram os princípios estoicos, utilizando, inclusive, as mesmas metáforas estoicas na Bíblia. Um facto tanto mais curioso é que Séneca, como filósofo, interessou-se por todos os fenómenos da natureza, resultando nas cartas intituladas posteriormente \"Questões da natureza\", como observou Edward Gibbon, historiador do iluminismo do século XVIII, perito na história do Império Romano e autor do livro História do Declínio e Queda do Império Romano.</string>
    <string name="novidades" translatable="false">Novidades!</string>
    <string name="noticias" translatable="false">Notícias</string>
    <string name="contato" translatable="false">Contato</string>
    <string name="hello_word">Hello World!</string>
    <string name="title_activity_splash2">Splash2Activity</string>
    <string name="tutorial_create_goals">Ok</string>
    <string name="tutorial_discovery_goals">Descobrir</string>
    <string name="tutorial_subtitle_text_information_ok">Opcao 3</string>
    <string name="tutorial_subtitle_text_information_goals_3">Opcao 2</string>
    <string name="tutorial_subtitle_text_information_goals_2">Opcao 1</string>
    <string name="tutorial_subtitle_text_information_goals_1">Opcao 0</string>
    <string name="text_info_transfer">info</string>
    <!-- Credit Installment - Confirmation contracts and additional product info -->
    <string name="credit_installment_confirmation_contract_info"  translatable="false"><![CDATA[
        <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
        <html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
        <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width" /></head><body><div style="padding: 30px">
        <strong>CET</strong><p>
        Desde 03/03/2008, o CET deve ser informado previamente a contratação das operações de crédito e arrecadamento mercantil financeiro realizados com Pessoas Físicas.<br>
        O CET é calculado considerando os fluxos referentes as liberações e aos pagamentos previstos, incluindo taxas de juros, tributos, tarifas, seguros e outros serviços autorizados, inclusive quando essas despesas forem financiadas, e o cálculo dos percentuais de cada componente do fluxo da operação foi efetuado considerando o valor total devido no ato da contratação desta operação.<p>
        <strong>Encargos de Atraso</strong><p>
        Juros remuneratórios: a mesma taxa prevista nesta contratação sobre o valor da dívida.<br>
        Juros moratórios: 1% ao mês sobre o valor da dívida, acrescido de juros remuneratórios.<br>
        Multa: 2% sobre o total devido<br>
        Despesas de cobrança e honorários advocatícios extrajudiciais de 10% sobre o valor do saldo devedor.<br>
        A contratação de Crédito exige um bom planejamento.<p>
        <strong>Direitos do Consumidor</strong><p>
        É assegurado ao consumidor: liquidação antecipada com redução proporcional dos juros e demais acréscimos; portabilidade desta operação para outro Banco e a desistência da operação em até 7 dias do recebimento do valor, devendo o consumidor restituir ao banco o valor total financiado, acrescido de eventuais tributos e juros incidentes até a data da efetiva devolução.<p></div></body></html>
    ]]></string>
    <string name="credit_installment_confirmation_agreement_info"  translatable="false"><![CDATA[
        <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
        <html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/xhtml">
        <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width" /></head><body><div style="padding: 30px">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat volutpat odio in auctor. Nullam vitae ultrices turpis. Maecenas vulputate ut risus in ultrices. Vivamus ullamcorper dui vitae leo congue dapibus. Maecenas auctor facilisis neque, non sodales purus commodo sed. Sed ut vestibulum mi. Maecenas efficitur tortor vitae ultrices mattis. Phasellus in malesuada tellus, eu molestie diam. Aenean eu iaculis nisi. Vestibulum vitae rutrum ex, id pretium urna. Vestibulum vel dignissim erat, et sodales risus. Aliquam ac nisi eu magna mattis gravida. Duis consequat venenatis imperdiet.<p>
        Integer nec ipsum vitae tellus consequat maximus. Cras eu nibh nec metus pellentesque consectetur quis eget mauris. Aenean sed tincidunt lorem. Suspendisse sed est pretium, suscipit felis non, condimentum diam. Curabitur mattis malesuada eleifend. Pellentesque ullamcorper massa at venenatis bibendum. In varius scelerisque quam, ut ultrices urna efficitur nec. Cras id lacus ligula. Quisque pulvinar dolor ac sodales scelerisque.<p>
        In erat ligula, feugiat et lectus non, facilisis finibus tellus. Nulla fringilla, elit quis vulputate luctus, nisi est condimentum tellus, sit amet luctus turpis mauris ac lectus. Nulla rhoncus sit amet erat non fringilla. Integer ac lobortis diam, id feugiat dui. Morbi quis sem in neque lacinia euismod at vel sapien. Aliquam efficitur sit amet ante vitae varius. Sed sagittis pretium iaculis. Aenean quis elit sit amet neque blandit vehicula. Quisque ac semper enim. Nulla congue pretium pellentesque. Phasellus semper vehicula urna vitae volutpat.<p>
        Nam vel lacinia turpis. Aliquam maximus justo at nulla tincidunt, feugiat varius ex pulvinar. Ut bibendum ex at libero tristique aliquet. Morbi quis nisi iaculis, consequat diam non, convallis arcu. Etiam lacinia sed purus ac ornare. Curabitur consectetur arcu a euismod imperdiet. Curabitur at lorem nisi. Nullam fringilla aliquet accumsan. Nulla sit amet sapien orci. Maecenas tristique lobortis nibh a interdum.<p>
        Ut finibus hendrerit nunc. Integer id mi eu nulla tristique congue. Aliquam vestibulum lacus nec rutrum consectetur. Suspendisse potenti. Morbi ornare eu leo ac finibus. Donec viverra varius lacus eu ultricies. Morbi molestie dolor ipsum, at sagittis odio commodo quis. Pellentesque et aliquam risus. Quisque vestibulum leo et risus pulvinar interdum. Mauris pulvinar neque nec elit dignissim aliquam.<p></div></body></html>
    ]]></string>


</resources>
