<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraint_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_4"
    android:orientation="vertical">

    <View
        android:id="@+id/view_line_divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tutorial_subtitle_text_information_goals_1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tutorial_subtitle_text_information_goals_2"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/tutorial_subtitle_text_information_goals_3"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_investor_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/text_type_of_love"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/tutorial_subtitle_text_information_ok"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:id="@+id/ok"
            android:layout_gravity="center"
            android:text="@string/tutorial_create_goals" />

        <TextView
            android:id="@+id/discover_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/tutorial_discovery_goals"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            />

    </LinearLayout>

</LinearLayout>