<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:minHeight="200dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:background="@color/blue_background"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"/>

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            tools:text="@string/not_keep_activities_mode_info"/>

        <LinearLayout
            android:id="@+id/btn_exit"
            android:background="@color/white"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:background="@color/blue_background"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:text="@string/exit"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>